Fix breadcrumb text clipping issue
Fixing issue on low resolutions / narrow screens where the breadcrumb
menu items overlap under the reference items to the right. This is
closer to the hg.sr.ht layout which wraps on narrow screens.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -414,7 +414,6 @@ img {
   display: flex;
 
   .breadcrumb {
-    white-space: nowrap;
     flex-grow: 1;
     width: 100%;
   }
